--- a/style.css
+++ b/style.css
@@ -323,3 +323,23 @@ article .dyo-promo.only-phone {
 	}
 	
 }	
+
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px !important;
+  }
+  
+  .gform_confirmation_message
+  {
+  	padding-top: 30px !important;
+  }
+  
+  .free-quote .gform_confirmation_message
+  {
+  	padding-top: 50px !important;
+  }
+  
+}
